Inclusão da logo

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 		<div class="container px-xl-0">
 			<div class="row justify-content-between align-items-baseline">
 				<div class="col-md-2" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
+					<img srcset="https://trello-attachments.s3.amazonaws.com/5b6447db7686c9e3109bd48d/5b6447db7686c9e3109bd4c2/b668b2fea6fdb12598483ae16c159f1b/signo-branco.png" class="img-logo" alt="logo da empresa">
 					<div class="logo color-white">Udara</div>
 				</div>
 				<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
