--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
 				<div class="row justify-content-center">
 					<div class="col-lg-3 col-md-5 col-sm-6 mb-70 mb-lg-0 block" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
 						<div class="f-22 title">Starter</div>
-						<div class="mt-10 color-heading subtitle">Entre em contato</div>
+						<div class="mt-10 color-heading subtitle">Pequenos Talentos</div>
 						<div class="mx-auto mt-25 bg-gray f-62 lh-130 color-heading w-130 h-130 radius_full">
 							<i class="fas fa-bomb"></i> 
 						</div>
-						<a href="#" class="mt-40 btn border-gray color-main">Entre em contato</a>
+						<a href="#" class="mt-40 btn border-gray color-main">Consulte o valor</a>
 						<div class="mt-45 text-adaptive">
 							<div>Até 10 colaboradores</div>
 							<div>Até 5 setores</div>
@@ -174,11 +174,11 @@
 					</div>
 					<div class="col-lg-3 col-md-5 col-sm-6 mb-70 mb-sm-0 block" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500">
 						<div class="f-22 title">Standard</div>
-						<div class="mt-10 color-heading subtitle">Entre em contato</div>
+						<div class="mt-10 color-heading subtitle">Estamos Crescendo</div>
 						<div class="mx-auto mt-25 bg-gray f-62 lh-130 color-heading w-130 h-130 radius_full">
 							<i class="fas fa-heart"></i> 
 						</div>
-						<a href="#" class="mt-40 btn action-1">Entre em contato</a>
+						<a href="#" class="mt-40 btn action-1">Consulte o valor</a>
 						<div class="mt-45 text-adaptive">
 							<div>Até 10 colaboradores</div>
 							<div>Até 5 setores</div>
@@ -188,11 +188,11 @@
 					</div>
 					<div class="col-lg-3 col-md-5 col-sm-6 block" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
 						<div class="f-22 title">Enterprise</div>
-						<div class="mt-10 color-heading subtitle">Entre em contato</div>
+						<div class="mt-10 color-heading subtitle">O Céu é o Limite</div>
 						<div class="mx-auto mt-25 bg-gray f-62 lh-130 color-heading w-130 h-130 radius_full">
 							<i class="fas fa-building"></i> 
 						</div>
-						<a href="#" class="mt-40 btn border-gray color-main">Entre em contato</a>
+						<a href="#" class="mt-40 btn border-gray color-main">Consulte o valor</a>
 						<div class="mt-45 text-adaptive">
 							<div>Até 10 colaboradores</div>
 							<div>Até 5 setores</div>
