--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<div class="container px-xl-0">
 			<div class="row justify-content-between align-items-baseline">
 				<div class="col-md-2" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-					<img srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa">
+					<img srcset="i/logo.png" class="img-logo" alt="logo da empresa">
 					<div class="logo color-white">Udara</div>
 				</div>
 				<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
@@ -73,7 +73,40 @@
 			</div>
 		</div>
 	</nav>
-
+	<div class="fundo-topo"></div>
+		<style>
+			.fundo-topo{
+				width: 100%;
+				height: 100%;
+				background-image:url("i/landing-bg.jpg");
+				position: relative;
+				animation: right-to-left;
+				position: absolute;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				width: 100%;
+				height: 100%;
+				margin: 0;
+				text-align: center;
+				box-sizing: border-box;
+				animation-delay:0s;
+				animation-direction:normal;
+				animation-duration:50s;
+				animation-fill-mode:none;
+				animation-iteration-count:infinite;
+				animation-play-state:running;
+				animation-timing-function:linear;
+			}
+			@-webkit-keyframes right-to-left{
+			from{background-position:0 0}
+			to{background-position:-4000px 0}
+			}@-webkit-keyframes right-to-left{
+			from{background-position:0 0;}
+			to{background-position:4000px 0;}
+			}
+		</style>
 	<div class="container">
 		<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile">Udara</div>
 		<h1 class="big color-white text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">Descomplique sua <br />avaliação de desempenho</h1>
