Campo telefone incluído no formlário de contato. Telefone retirado do site

--- a/index.html
+++ b/index.html
@@ -266,11 +266,15 @@
 				<h2 class="small" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0" id="contato">Entre em contato</h2>
 				<form action="form-handler.php" method="post" class="mt-50">
 					<div class="row">
-						<div class="col-sm-6" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
+						<div class="col-sm" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
 							<input type="text" name="name" placeholder="Seu nome" class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left" required />
 						</div>
-						<div class="col-sm-6" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500">
+						<div class="col-sm" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500">
 							<input type="email" name="email" placeholder="Seu e-mail" class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left" required />
+						</div>
+						<div class="col-sm" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
+							<input type="tel" name="telefone" placeholder="Seu telefone" class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left"/>
+
 						</div>
 					</div>
 					<div data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
@@ -287,8 +291,8 @@
 						</div>
 					</div>
 					<div data-aos-duration="500" data-aos="fade-down" data-aos-delay="1500">
-						<div class="mt-55 f-14 text-uppercase sp-20 separate">ou ligue</div>
-						<a href="tel:+15555055050" class="mt-35 link color-white f-22">+55 47 9 9969-9414</a>
+						<div class="mt-55 f-14 text-uppercase sp-20 separate"></div>
+						<a href="tel:+15555055050" class="mt-35 link color-white f-22"></a>
 					</div>
 				</form>
 			</div>
