Carousel adicionado na seção 'Clientes', com exemplos.

--- a/index.html
+++ b/index.html
@@ -147,13 +147,15 @@
 				<h2 class="mb-45 small"data-aos-duration="500" data-aos="fade-down" data-aos-delay="0" id="diferenciais">Diferenciais</h2>
 				<div class="row justify-content-center">
 					<div class="col-md-4 mb-50" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
-						<i class="fas fa-briefcase f-60 action-3"></i>						<div class="mt-20 mb-25 f-22 title">Avalie sua <br />equipe</div>
+						<i class="fas fa-briefcase f-60 action-3"></i>
+						<div class="mt-20 mb-25 f-22 title">Avalie sua <br />equipe</div>
 						<div class="color-heading text-adaptive">
 							Desenvolvemos uma plataforma que objetiva auxiliar as empresas a medir o desempenho e a desenvolver competências em suas equipes. Fazemos isso mensurando atitudes, engajando os colaboradores e os tornar protagonistas da própria avaliação. Nossa ferramenta busca trabalhar uma avaliação de desempenho que seja transparente e eficaz, empoderando o avaliado.
 						</div>
 					</div>
 					<div class="col-md-4 mb-50" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500">
-						<i class="fas fa-compress-arrows-alt f-60 action-3"></i>						<div class="mt-20 mb-25 f-22 title">Tenha <br />Assertividade</div>
+						<i class="fas fa-compress-arrows-alt f-60 action-3"></i>
+						<div class="mt-20 mb-25 f-22 title">Tenha <br />Assertividade</div>
 						<div class="color-heading text-adaptive">
 							Nosso sistema foi mapeado para servir como uma ferramenta de avaliação de desempenho, mas, também, como um plano de capacitação. Temos metas de desempenho baseadas nas atitudes do colaborador, elencadas conforme as competências mais demandadas do mercado de trabalho atualmente, correlacionando com as competências essenciais da empresa.
 						</div>
@@ -172,22 +174,45 @@
 
 <!-- Testimonial 2 -->
 
-<section class="testimonial_2 bg-dark color-white pt-75 pb-75"id="clientes">
-	<div class="container px-xl-0 text-center">
-		<div class="row justify-content-center">
-			<div class="col-xl-6 col-lg-8 col-md-10">
-				<i class="fas fa-quote-left f-30 color-gray" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0"></i>
-				<div class="mt-35 mb-45 f-22 text-adaptive" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
-					You can decide whether to create your site using UI 
-					Kit blocks or samples. The blocks can merge 
-					together in various combinations.
-				</div>
-				<img srcset="i/testimonial_2_img@2x.jpg 2x" src="i/testimonial_2_img.jpg" class="w-120 h-120 radius_full" alt="" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500" />
-				<div class="mt-20 f-18 medium" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">Jordan Bargeman</div>
-				<div class="f-14 semibold color-heading text-uppercase sp-20" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">Google</div>
-			</div>
-		</div>
-	</div>
+<section class="testimonial_2 bg-dark color-white pt-75 pb-75 text-center"id="clientes ">
+    <div class="container px-xl-0">
+        <h2 class="mb-45 small"data-aos-duration="500" data-aos="fade-down" data-aos-delay="0" id="clientes">Clientes</h2>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner text-center">
+                <div class="carousel-item active">
+                    <img class="logo-cliente" src="i/logo-uniavan-branca.png" alt="primeiro slide">
+                    <div class="mt-20 mb-25 f-22 title">Centro Universitário <br />Avantis</div>
+                    <div class="color-heading text-adaptive">
+                    "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
+                    </div>
+                </div>
+                 <div class="carousel-item">
+                    <img class="logo-cliente" src="i/logo-ampesc.png" alt="segundo slide">
+                    <div class="mt-20 mb-25 f-22 title">Associacao De Mantenedoras Particulares  <br />De Ensino Superior De Santa Catarina</div>
+                    <div class="color-heading text-adaptive">
+                        "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
+                    </div>
+                </div>
+                    <div class="carousel-item">
+                    <img class="logo-cliente" src="i/logo-studioa.png" alt="terceiro slide">
+                    <div class="mt-20 mb-25 f-22 title">Studio A <br />Laboratório Digital</div>
+                    <div class="color-heading text-adaptive">
+                    "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
+                    </div>
+                </div>
+            </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+        </div>
+</div>
+
+
 </section>
 
 <section class="pricing_table_2 bg-light pt-80 pb-70 text-center">
