--- a/index.html
+++ b/index.html
@@ -180,21 +180,21 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner text-center">
                 <div class="carousel-item active">
-                    <img class="logo-cliente" src="i/logo-uniavan-branca.png" alt="primeiro slide">
+                    <img class="" src="i/logo-uniavan-branca.png" alt="primeiro slide">
                     <div class="mt-20 mb-25 f-22 title">Centro Universitário <br />Avantis</div>
                     <div class="color-heading text-adaptive">
                     "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
                     </div>
                 </div>
                  <div class="carousel-item">
-                    <img class="logo-cliente" src="i/logo-ampesc.png" alt="segundo slide">
+                    <img class="" src="i/logo-ampesc.png" alt="segundo slide">
                     <div class="mt-20 mb-25 f-22 title">Associacao De Mantenedoras Particulares  <br />De Ensino Superior De Santa Catarina</div>
                     <div class="color-heading text-adaptive">
                         "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
                     </div>
                 </div>
                     <div class="carousel-item">
-                    <img class="logo-cliente" src="i/logo-studioa.png" alt="terceiro slide">
+                    <img class="" src="i/logo-studioa.png" alt="terceiro slide">
                     <div class="mt-20 mb-25 f-22 title">Studio A <br />Laboratório Digital</div>
                     <div class="color-heading text-adaptive">
                     "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
