--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 		<div class="container px-xl-0">
 			<div class="row justify-content-between align-items-baseline">
 				<div class="col-md-2" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-					<img srcset="i/logo.png" class="img-logo" alt="logo da empresa">
-					<div class="logo color-white">Udara</div>
+					<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+					<a href="#"><div class="logo color-white">Udara</div></a>
 				</div>
 				<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
 					<a href="#diferenciais" class="link color-white f-18 mx-15">Diferenciais</a>
@@ -183,21 +183,18 @@
                     <img class="" src="i/logo-uniavan-branca.png" alt="primeiro slide">
                     <div class="mt-20 mb-25 f-22 title">Centro Universitário <br />Avantis</div>
                     <div class="color-heading text-adaptive">
-                    "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
                     </div>
                 </div>
                  <div class="carousel-item">
                     <img class="" src="i/logo-ampesc.png" alt="segundo slide">
                     <div class="mt-20 mb-25 f-22 title">Associacao De Mantenedoras Particulares  <br />De Ensino Superior De Santa Catarina</div>
                     <div class="color-heading text-adaptive">
-                        "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
                     </div>
                 </div>
                     <div class="carousel-item">
                     <img class="" src="i/logo-studioa.png" alt="terceiro slide">
                     <div class="mt-20 mb-25 f-22 title">Studio A <br />Laboratório Digital</div>
                     <div class="color-heading text-adaptive">
-                    "Utilizamos a ferramenta com toda equipe administrativa. <br/>Os resultados foram fantásticos. Todos se envolveram <br/> e ficaram extremamente motivados." 
                     </div>
                 </div>
             </div>
@@ -309,14 +306,15 @@
 						<div class="mb-20 col-sm-6 text-sm-left" data-aos-duration="500" data-aos="fade-down" data-aos-delay="1000">
 							<input type="checkbox" name="send_copy" class="d-none border-transparent-white focus-action-1" id="contact_1_checkbox" checked />
 							<label for="contact_1_checkbox">
-								Me envie uma cópia							</label>
+								Me envie uma cópia
+							</label>
 						</div>
 						<div class="col-sm-6 text-sm-right" data-aos-duration="500" data-aos="fade-down" data-aos-delay="1250">
 							<button class="btn action-3">Enviar mensagem</button>
 						</div>
 					</div>
 					<div data-aos-duration="500" data-aos="fade-down" data-aos-delay="1500">
-						<div class="mt-55 f-14 text-uppercase sp-20 separate"></div>
+						<div class=""></div>
 						<a href="tel:+15555055050" class="mt-35 link color-white f-22"></a>
 					</div>
 				</form>
