Alteração de ícones dos planos e configuração do form

--- a/index.html
+++ b/index.html
@@ -223,42 +223,48 @@
 						<div class="f-22 title">Starter</div>
 						<div class="mt-10 color-heading subtitle">Pequenos Talentos</div>
 						<div class="mx-auto mt-25 bg-gray f-62 lh-130 color-heading w-130 h-130 radius_full">
-							<i class="fas fa-bomb"></i> 
+						<img style= "width: .8em" src="i/thunder-icon.svg" alt="Ícone plano starter">						
 						</div>
-						<a href="#" class="mt-40 btn border-gray color-main">Consulte o valor</a>
+						<a href="#seu-nome" class="mt-40 btn border-gray color-main">Consulte o valor</a>
 						<div class="mt-45 text-adaptive">
-							<div>Até 10 colaboradores</div>
-							<div>Até 5 setores</div>
-							<div>250 Mb de armazenamento</div>
-							<div>Até 10 ciclos</div>
+							<div><span class="check-icon">L</span>Até 10 colaboradores</div>
+							<div><span class="check-icon">L</span>Até 5 setores</div>
+							<div><span class="check-icon">L</span>Suporte limitado <br>por e-mail</br></div>
+							<div style="text-decoration: line-through; opacity: 0.3;"><span class="check-icon">L</span>Implantação Assistida</div>
+							<div style="text-decoration: line-through; opacity: 0.3;"><span class="check-icon">L</span>Consultor de Sucesso com reuniões mensais para insights e melhorias</div>
+
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-5 col-sm-6 mb-70 mb-sm-0 block" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500">
 						<div class="f-22 title">Standard</div>
 						<div class="mt-10 color-heading subtitle">Estamos Crescendo</div>
 						<div class="mx-auto mt-25 bg-gray f-62 lh-130 color-heading w-130 h-130 radius_full">
-							<i class="fas fa-heart"></i> 
+							<img style= "width: 1.1em" src="i/trophy-icon.svg" alt="Ícone plano Standard"> 
 						</div>
-						<a href="#" class="mt-40 btn action-1">Consulte o valor</a>
+						<a href="#seu-nome" class="mt-40 btn action-1">Consulte o valor</a>
 						<div class="mt-45 text-adaptive">
-							<div>Até 10 colaboradores</div>
-							<div>Até 5 setores</div>
-							<div>250 Mb de armazenamento</div>
-							<div>Até 10 ciclos</div>
+							<div> <span class="check-icon">L</span>Até 30 colaboradores</div>
+							<div> <span class="check-icon">L</span>Até 15 setores</div>
+							<div> <span class="check-icon">L</span>Suporte via e-mail, chat e telefone</div>
+							<div> <span class="check-icon">L</span>Implantação Assistida</div>
+							<div style="text-decoration: line-through; opacity: 0.3;"><span class="check-icon">L</span>Consultor de Sucesso com reuniões mensais para insights e melhorias</div>
+
 						</div>
 					</div>
 					<div class="col-lg-3 col-md-5 col-sm-6 block" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
 						<div class="f-22 title">Enterprise</div>
 						<div class="mt-10 color-heading subtitle">O Céu é o Limite</div>
-						<div class="mx-auto mt-25 bg-gray f-62 lh-130 color-heading w-130 h-130 radius_full">
-							<i class="fas fa-building"></i> 
+						<div class="mx-auto mt-25 bg-gray f-62 lh-120 color-heading w-130 h-130 radius_full">
+						<img style= "width: 1em" src="i/star-icon.svg" alt="Ícone plano Enterprise"> 
 						</div>
-						<a href="#" class="mt-40 btn border-gray color-main">Consulte o valor</a>
+						<a href="#seu-nome" class="mt-40 btn border-gray color-main">Consulte o valor</a>
 						<div class="mt-45 text-adaptive">
-							<div>Até 10 colaboradores</div>
-							<div>Até 5 setores</div>
-							<div>250 Mb de armazenamento</div>
-							<div>Até 10 ciclos</div>
+							<div><span class="check-icon">L</span>+ de 30 colaboradores</div>
+							<div><span class="check-icon">L</span>+ de 15 setores</div>
+							<div><span class="check-icon">L</span>Suporte via e-mail, chat e telefone</div>
+							<div><span class="check-icon">L</span>Implantação Assistida</div>
+							<div><span class="check-icon">L</span>Consultor de Sucesso com reuniões mensais para insights e melhorias</div>
+
 						</div>
 					</div>
 				</div>
@@ -289,13 +295,13 @@
 				<form action="form-handler.php" method="post" class="mt-50">
 					<div class="row">
 						<div class="col-sm" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
-							<input type="text" name="name" placeholder="Seu nome" class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left" required />
+							<input type="text" name="name" placeholder="Seu nome" id="seu-nome" class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left" required />
 						</div>
 						<div class="col-sm" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500">
 							<input type="email" name="email" placeholder="Seu e-mail" class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left" required />
 						</div>
 						<div class="col-sm" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
-							<input type="tel" name="telefone" placeholder="Seu telefone" class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left"/>
+							<input type="tel" name="phone" placeholder="Seu telefone" class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left"/>
 
 						</div>
 					</div>
