--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				animation-timing-function: linear;
 			}
 
-			@-webkit-keyframes right-to-left {
+			@keyframes right-to-left {
 				from {
 					background-position: 0 0
 				}
@@ -122,7 +122,7 @@
 				}
 			}
 
-			@-webkit-keyframes right-to-left {
+			@keyframes left-to-right {
 				from {
 					background-position: 0 0;
 				}
@@ -157,8 +157,7 @@
 
 			<div class="color-white op-3 text-center mt-35">
 				<span data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-					Ao se cadastrar, você está de acordo com o nossos
-					<a href="#" class="link color-white">Termos de Serviço</a> </span>
+					Informe seu e-mail que entraremos em contato.
 			</div>
 
 		</div>
