Inclusão Logo Ioa sa seção clientes e ajuste de textos alt

--- a/index.html
+++ b/index.html
@@ -219,20 +219,26 @@
 			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner text-center">
 					<div class="carousel-item active">
-						<img class="" src="i/logo-uniavan-branca.png" alt="primeiro slide">
-						<div class="mt-20 mb-25 f-22 title">Centro Universitário <br />Avantis</div>
+						<img class="" src="i/logo-uniavan-branca.png" alt="Logo Uniavan">
+						<div class="mt-20 mb-25 f-22 title">Centro Universitário <br/>Avantis</div>
 						<div class="color-heading text-adaptive">
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img class="" src="i/logo-ampesc.png" alt="segundo slide">
+						<img class="" src="i/logo-ampesc.png" alt="Logo Ampesc">
 						<div class="mt-20 mb-25 f-22 title">Associacao De Mantenedoras Particulares <br />De Ensino
 							Superior De Santa Catarina</div>
 						<div class="color-heading text-adaptive">
 						</div>
 					</div>
 					<div class="carousel-item">
-						<img class="" src="i/logo-studioa.png" alt="terceiro slide">
+						<img class="" src="i/logo-ioa.png" alt="Logo IOA">
+						<div class="mt-20 mb-25 f-22 title">Instituto Odontológico <br/>das Américas</div>
+						<div class="color-heading text-adaptive">
+						</div>
+					</div>
+					<div class="carousel-item">
+						<img class="" src="i/logo-studioa.png" alt="Logo Studioa A">
 						<div class="mt-20 mb-25 f-22 title">Studio A <br />Laboratório Digital</div>
 						<div class="color-heading text-adaptive">
 						</div>
