Troca de ícones Diferencias e ajuste de colres de hovers e títulos

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						id="diferenciais">Diferenciais</h2>
 					<div class="row justify-content-center">
 						<div class="col-md-4 mb-50" data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
-							<i class="fas fa-briefcase f-60 action-3"></i>
+							<img class="differentials-icons" src="i/blog-icon.svg">
 							<div class="mt-20 mb-25 f-22 title">Avalie sua <br />equipe</div>
 							<div class="color-heading text-adaptive">
 								Desenvolvemos uma plataforma que objetiva auxiliar as empresas a medir o desempenho e a
@@ -184,7 +184,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 mb-50" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500">
-							<i class="fas fa-compress-arrows-alt f-60 action-3"></i>
+							<img class="differentials-icons" src="i/checked-calendar-icon.svg">
 							<div class="mt-20 mb-25 f-22 title">Tenha <br />Assertividade</div>
 							<div class="color-heading text-adaptive">
 								Nosso sistema foi mapeado para servir como uma ferramenta de avaliação de desempenho,
@@ -194,7 +194,7 @@
 							</div>
 						</div>
 						<div class="col-md-4 mb-50" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-							<i class="fas fa-desktop f-60 action-3"></i>
+							<img class="differentials-icons" src="i/speech-balloon-icon.svg">
 							<div class="mt-20 mb-25 f-22 title">Engaje <br />mais</div>
 							<div class="color-heading text-adaptive">
 								Nossa interface é amigável e lembra muito uma rede social, o que torna a experiência do
@@ -412,7 +412,7 @@
 				</div>
 				<div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
-					<a href="#" class="logo link color-main">Udara</a>
+					<a href="#" class="nome-empresa">Udara</a>
 				</div>
 				<div class="col-lg-4 col-sm-6 text-sm-left text-lg-right order-2 order-lg-0" data-aos-duration="500"
 					data-aos="fade-down" data-aos-delay="250">
