Alterado o idioma da página para pt-br; Color-main alterada para roxo; Ajuste no Carousel; Alertas traduzidos; Criação da página de políticas de privacidade; troca do ícone do google + pelo do instagram

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 	<meta charset="utf-8">
@@ -69,8 +69,7 @@
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-2" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
 						<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
-						<a href="#">
-							<div class="logo color-white">Udara</div>
+						<div class="logo color-white">Udara</div>
 						</a>
 					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
@@ -195,7 +194,7 @@
 		<div class="container px-xl-0">
 			<h2 class="mb-45 small" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0" id="clientes">
 				Clientes</h2>
-			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+			<div id="carouselClientes" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner text-center">
 					<div class="carousel-item active">
 						<img class="" src="i/logo-uniavan-branca.png" alt="Logo Uniavan">
@@ -223,11 +222,11 @@
 						</div>
 					</div>
 				</div>
-				<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+				<a class="carousel-control-prev" href="#carouselClientes" role="button" data-slide="prev">
 					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 					<span class="sr-only">Previous</span>
 				</a>
-				<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+				<a class="carousel-control-next" href="#carouselClientes" role="button" data-slide="next">
 					<span class="carousel-control-next-icon" aria-hidden="true"></span>
 					<span class="sr-only">Next</span>
 				</a>
@@ -339,7 +338,7 @@
 									required />
 							</div>
 							<div class="col-sm" data-aos-duration="500" data-aos="fade-down" data-aos-delay="500">
-								<input type="email" name="email" placeholder="Seu e-mail"
+								<input type="email" name="email" placeholder="E-mail corporativo"
 									class="mb-30 input w-full border-transparent-white focus-white color-white placeholder-transparent-white text-center text-sm-left"
 									required />
 							</div>
@@ -386,7 +385,7 @@
 				<div class="col-lg-4 col-sm-6 text-sm-right text-lg-left order-1 order-lg-0" data-aos-duration="500"
 					data-aos="fade-down" data-aos-delay="250">
 					<a href="#" class="mr-15 link color-main">Sobre</a>
-					<a href="#" class="mx-15 link color-main">Política</a>
+					<a href="politica-de-privacidade.html" class="mx-15 link color-main">Política</a>
 					<a href="#" class="mx-15 link color-main">Termos</a>
 				</div>
 				<div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="500" data-aos="fade-down"
@@ -398,7 +397,7 @@
 					<a href="#" class="mr-15 link color-main">Contatos</a>
 					<a href="#" class="mx-15 link color-main"><i class="fab fa-twitter"></i></a>
 					<a href="#" class="mx-15 link color-main"><i class="fab fa-facebook-square"></i></a>
-					<a href="#" class="ml-15 link color-main"><i class="fab fa-google-plus-g"></i></a>
+					<a href="#" class="ml-15 link color-main"><i class="fab fa-instagram"></i></a>
 				</div>
 			</div>
 			<div class="row justify-content-center">
@@ -406,7 +405,7 @@
 					data-aos-delay="0">
 					<div class="color-heading text-adaptive">
 						Dê uma olhada em nossos <a href="#" class="link color-heading">Termos de Uso</a> <br />
-						e em nossa <a href="#" class="link color-heading">Política de Privacidade</a>
+						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de Privacidade</a>
 					</div>
 				</div>
 			</div>
@@ -416,17 +415,17 @@
 	<div class="alert alert-success alert-dismissible alert-form-success" role="alert">
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
 				aria-hidden="true">&times;</span></button>
-		Thanks for your message!
+		Obrigado por sua mensagem!
 	</div>
 	<div class="alert alert-warning alert-dismissible alert-form-check-fields" role="alert">
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
 				aria-hidden="true">&times;</span></button>
-		Please, fill in required fields.
+		Por favor, preencha o campo requeirdo.
 	</div>
 	<div class="alert alert-danger alert-dismissible alert-form-error" role="alert">
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
 				aria-hidden="true">&times;</span></button>
-		An error occurred while sending data :(
+		Um erro ocorreu ao enviar os dados :(
 	</div>
 	<!-- popup with video -->
 	<div class="overlay"></div>
