--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -39,17 +39,17 @@
 		<a class="close_menu color-main"><i class="fas fa-times"></i></a>
 		<div class="px-40 pt-60 pb-60 text-center inner">
 
-			<div><a href="index.html#diferenciais" class="f-heading f-22 link color-main mb-20">Diferenciais</a></div>
+			<div><a href="index.html#diferenciais" class="f-heading f-22 link color-white mb-20">Diferenciais</a></div>
 
-			<div><a href="index.html#clientes" class="f-heading f-22 link color-main mb-20">Clientes</a></div>
+			<div><a href="index.html#clientes" class="f-heading f-22 link color-white mb-20">Clientes</a></div>
 
-			<div><a href="index.html#planos" class="f-heading f-22 link color-main mb-20">Planos e Preços</a></div>
+			<div><a href="index.html#planos" class="f-heading f-22 link color-white mb-20">Planos e Preços</a></div>
 
-			<div><a href="index.html#" class="f-heading f-22 link color-main mb-20">Blog</a></div>
+			<div><a href="index.html#" class="f-heading f-22 link color-white mb-20">Blog</a></div>
 
-			<div><a href="#contato" class="f-heading f-22 link color-main mb-20">Contato</a></div>
+			<div><a href="#contato" class="f-heading f-22 link color-white mb-20">Contato</a></div>
 
-			<div><a href="#acesso" class="f-heading f-22 link color-main mb-20">Acesso</a></div>
+			<div><a href="#acesso" class="f-heading f-22 link color-white mb-20">Acesso</a></div>
 			<div class="socials mt-60">
 				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-twitter"></i></a>
 				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-facebook"></i></a>
@@ -62,7 +62,7 @@
 
 	<!-- Header 2 -->
 
-	<header class="pt-190 pb-120 bg-light header_2">
+	<header class="pt-190 pb-120 bg-dark header_2">
 
 		<!-- Header Menu 2 -->
 
@@ -70,17 +70,17 @@
 			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-2" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="index.html"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+						<a href="index.html"><img srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa"></a>
 							<div class="logo color-white">Udara</div>
 						</a>
 					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
 						data-aos="fade-down" data-aos-delay="750">
-						<a href="index.html#diferenciais" class="link color-main f-18 mx-15">Diferenciais</a>
-						<a href="index.html#clientes" class="link color-main f-18 mx-15">Clientes</a>
-						<a href="index.html#planos" class="link color-main f-18 mx-15">Planos & Preços</a>
-						<a href="#" class="link color-main f-18 mx-15">Blog</a>
-						<a href="#contato" class="link color-main f-18 mx-15">Contato</a>
+						<a href="index.html#diferenciais" class="link color-white f-18 mx-15">Diferenciais</a>
+						<a href="index.html#clientes" class="link color-white f-18 mx-15">Clientes</a>
+						<a href="index.html#planos" class="link color-white f-18 mx-15">Planos & Preços</a>
+						<a href="#" class="link color-white f-18 mx-15">Blog</a>
+						<a href="#contato" class="link color-white f-18 mx-15">Contato</a>
 						<a href="#acesso" class="btn sm action-2 mx-15">Acesso</a>
 					</div>
 				</div>
@@ -89,13 +89,13 @@
 
 		<div class="container">
 			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile">Udara</div>
-			<h2 class="color-main text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
+			<h2 class="color-white text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
 				Política de Privacidade</h2>
-			<div class="mw-1000 mx-auto mt-35 f-22 color-heading op-7 text-justify text-adaptive">
+			<div class="mw-1000 mx-auto mt-35 f-22 color-white op-7 text-justify text-adaptive">
 				<span data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
 					<p>Respeitamos suas informações.</p>
 					<p>Quando você se cadastra na Udara nós coletamos algumas informações pessoais: nome, telefone e
-						e-mail;
+						e-mail.
 					</p>
 					<p>Nosso objetivo ao coletarmos estas informações quanto ao seu nome, seu telefone e também seu
 						e-mail, é termos a possibilidade de entrarmos em contato com você para lhe oferecer nossos
