Troca da imagem de fundo do formulário de contato.

--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -122,13 +122,13 @@
 
 		<style>
 			.contact_1 {
-				background-image: url(i/contact_1_bg.jpg);
+				background-image: url(i/top-header6.png);
 			}
 
 			@media(-webkit-min-device-pixel-ratio: 1.25),
 			(min-resolution: 120dpi) {
 				.contact_1 {
-					background-image: url(i/contact_1_bg@2x.jpg);
+					background-image: url(i/top-header6.png);
 				}
 			}
 		</style>
