Inserção de faixa branca no nav menu.

--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
 </head>
 
 <body>
-	<!-- Navigation Mobile type 2 -->
+	<!-- WhatsApp -->
 	<a href="http://bit.ly/2m6la4k" Style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50%;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
 		z-index:1000;" target="_blank">
 		<i style="margin-top:16px" class="fa fa-whatsapp"></i>
 	</a>
+
+	<!-- Navigation Mobile type 2 -->
 	<a class="open_menu color-main bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
 	<div class="navigation_mobile bg-light type2">
 		<a class="close_menu color-main"><i class="fas fa-times"></i></a>
@@ -63,22 +65,20 @@
 	<header class="pt-190 pb-120 bg-dark header_2">
 
 		<!-- Header Menu 2 -->
-
-		<nav class="header_menu_2 transparent pt-30 pb-30 mt-20">
+		<nav class="header_menu_2 pt-30 pb-40 mt-20">
 			<div class="container px-xl-0">
+				<a href="#"><img srcset="i/logo-texto.png" class="img-logo" data-aos-duration="500" data-aos="fade-down"
+						data-aos-delay="750" alt="logo da empresa"></a>
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-2" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
-						<div class="logo color-white">Udara</div>
-						</a>
 					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
 						data-aos="fade-down" data-aos-delay="750">
-						<a href="#diferenciais" class="link color-white f-18 mx-15">Diferenciais</a>
-						<a href="#clientes" class="link color-white f-18 mx-15">Clientes</a>
-						<a href="#planos" class="link color-white f-18 mx-15">Planos & Preços</a>
-						<a href="#" class="link color-white f-18 mx-15">Blog</a>
-						<a href="#contato" class="link color-white f-18 mx-15">Contato</a>
+						<a href="#diferenciais" class="link color-main f-18 mx-15">Diferenciais</a>
+						<a href="#clientes" class="link color-main f-18 mx-15">Clientes</a>
+						<a href="#planos" class="link color-main f-18 mx-15">Planos & Preços</a>
+						<a href="#" class="link color-main f-18 mx-15">Blog</a>
+						<a href="#contato" class="link color-main f-18 mx-15">Contato</a>
 						<a href="#acesso" class="btn sm action-2 mx-15">Acesso</a>
 					</div>
 				</div>
@@ -110,7 +110,7 @@
 			}
 		</style>
 
-<div class="container">
+		<div class="container">
 			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile">Udara</div>
 			<h1 class="big color-white text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
 				Descomplique sua <br />avaliação de desempenho</h1>
@@ -405,7 +405,8 @@
 					data-aos-delay="0">
 					<div class="color-heading text-adaptive">
 						Dê uma olhada em nossos <a href="#" class="link color-heading">Termos de Uso</a> <br />
-						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de Privacidade</a>
+						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de
+							Privacidade</a>
 					</div>
 				</div>
 			</div>
@@ -436,6 +437,7 @@
 		</a>
 		<div class="d-flex align-items-center justify-content-center w-full h-full iframe_container"></div>
 	</div>
+	<div class="faixa-branca" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750"></div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap 4.3.1 JS -->
