Etiqueta no fundo da logo

--- a/index.html
+++ b/index.html
@@ -29,10 +29,14 @@
 </head>
 
 <body>
-	<!-- Navigation Mobile type 2 -->
+	<!-- WhatsApp -->
+
 	<a href="http://bit.ly/2m6la4k" Style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50%;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
 		z-index:1000;" target="_blank">
 		<i style="margin-top:16px" class="fa fa-whatsapp"></i>
+
+		<!-- Navigation Mobile type 2 -->
+
 	</a>
 	<a class="open_menu color-main bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
 	<div class="navigation_mobile bg-light type2">
@@ -58,7 +62,9 @@
 				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-behance"></i></a>
 			</div>
 		</div>
-	</div><!-- Header 2 -->
+	</div>
+
+	<!-- Header 2 -->
 
 	<header class="pt-190 pb-120 bg-dark header_2">
 
@@ -67,13 +73,9 @@
 		<nav class="header_menu_2 transparent pt-30 pb-30 mt-20">
 			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
-					<div class="col-md-2" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
-						<div class="logo color-white">Udara</div>
-						</a>
-					</div>
+
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
-						data-aos="fade-down" data-aos-delay="750">
+						style="margin-left: 17%" data-aos="fade-down" data-aos-delay="750">
 						<a href="#diferenciais" class="link color-white f-18 mx-15">Diferenciais</a>
 						<a href="#clientes" class="link color-white f-18 mx-15">Clientes</a>
 						<a href="#planos" class="link color-white f-18 mx-15">Planos & Preços</a>
@@ -109,9 +111,17 @@
 				}
 			}
 		</style>
+		<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
+			<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+			<div class="logo color-main">Udara</div>
+			</a>
+		</div>
 
-<div class="container">
-			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile">Udara</div>
+		<div class="container">
+			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile"> <a href="#"><img
+						srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa"></a>
+				<div class="logo color-white">Udara</div>
+			</div>
 			<h1 class="big color-white text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
 				Descomplique sua <br />avaliação de desempenho</h1>
 			<div class="mw-620 mx-auto mt-35 f-22 color-white op-7 text-center text-adaptive">
@@ -405,7 +415,8 @@
 					data-aos-delay="0">
 					<div class="color-heading text-adaptive">
 						Dê uma olhada em nossos <a href="#" class="link color-heading">Termos de Uso</a> <br />
-						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de Privacidade</a>
+						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de
+							Privacidade</a>
 					</div>
 				</div>
 			</div>
