--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
 		<nav class="header_menu_2 transparent pt-30 pb-30 mt-20">
 			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
-
+					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
+						<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+						<div class="logo color-white" style="text-align: center">Udara</div>
+						</a>
+					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
-						style="margin-left: 17%" data-aos="fade-down" data-aos-delay="750">
+						data-aos="fade-down" data-aos-delay="750">
 						<a href="#diferenciais" class="link color-white f-18 mx-15">Diferenciais</a>
 						<a href="#clientes" class="link color-white f-18 mx-15">Clientes</a>
 						<a href="#planos" class="link color-white f-18 mx-15">Planos & Preços</a>
@@ -111,11 +115,6 @@
 				}
 			}
 		</style>
-		<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-			<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
-			<div class="logo color-main">Udara</div>
-			</a>
-		</div>
 
 		<div class="container">
 			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile"> <a href="#"><img
