--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+						<a href="#"><img srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa"></a>
 						<div class="logo color-white" style="text-align: center">Udara</div>
 						</a>
 					</div>
@@ -96,7 +96,7 @@
 			.fundo-topo {
 				width: 100%;
 				height: 100%;
-				background-image: url("i/landing-bg.jpg");
+				background-image: url("i/landing-roxo.png");
 				animation: right-to-left;
 				position: absolute;
 				bottom: 0;
