--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <body>
 	<!-- WhatsApp -->
+
 	<a href="http://bit.ly/2m6la4k" Style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50%;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
 		z-index:1000;" target="_blank">
 		<i style="margin-top:16px" class="fa fa-whatsapp"></i>
@@ -37,8 +38,6 @@
 		<!-- Navigation Mobile type 2 -->
 
 	</a>
-
-	<!-- Navigation Mobile type 2 -->
 	<a class="open_menu color-main bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
 	<div class="navigation_mobile bg-light type2">
 		<a class="close_menu color-main"><i class="fas fa-times"></i></a>
@@ -70,11 +69,17 @@
 	<header class="pt-190 pb-120 bg-dark header_2">
 
 		<!-- Header Menu 2 -->
-		<nav class="header_menu_2 pt-30 pb-40 mt-20">
+
+		<nav class="header_menu_2 transparent pt-30 pb-30 mt-20">
 			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
+					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
+						<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+						<div class="logo color-white" style="text-align: center">Udara</div>
+						</a>
+					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
-						style="margin-left: 17%" data-aos="fade-down" data-aos-delay="750">
+						data-aos="fade-down" data-aos-delay="750">
 						<a href="#diferenciais" class="link color-white f-18 mx-15">Diferenciais</a>
 						<a href="#clientes" class="link color-white f-18 mx-15">Clientes</a>
 						<a href="#planos" class="link color-white f-18 mx-15">Planos & Preços</a>
@@ -91,7 +96,7 @@
 			.fundo-topo {
 				width: 100%;
 				height: 100%;
-				background-image: url("i/landing-bg.jpg");
+				background-image: url("i/landing-roxo.png");
 				animation: right-to-left;
 				position: absolute;
 				bottom: 0;
@@ -110,11 +115,6 @@
 				}
 			}
 		</style>
-		<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-			<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
-			<div class="logo color-main">Udara</div>
-			</a>
-		</div>
 
 		<div class="container">
 			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile"> <a href="#"><img
@@ -446,7 +446,6 @@
 		</a>
 		<div class="d-flex align-items-center justify-content-center w-full h-full iframe_container"></div>
 	</div>
-	<div class="faixa-branca" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750"></div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 	<!-- Bootstrap 4.3.1 JS -->
