Revert "Ajustado o tom do fundo roxo e trocada a logo para a roxa."
This reverts commit 142bf70c6094ceffc19fda6466ecae2e57d4eb88.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+						<a href="#"><img srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa"></a>
 						<div class="logo color-white" style="text-align: center">Udara</div>
 						</a>
 					</div>
