--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<a href="#planos" class="link color-white f-18 mx-15">Planos & Preços</a>
 						<a href="#" class="link color-white f-18 mx-15">Blog</a>
 						<a href="#contato" class="link color-white f-18 mx-15">Contato</a>
-						<a href="#acesso" class="btn sm action-2 mx-15">Acesso</a>
+						<a href="#acesso" class="btn sm action-2 mx-15">Acesso teste</a>
 					</div>
 				</div>
 			</div>
