Correção de links do nav menu; troca fundo políticas de privacidade; troca de logo para ecrã mobile

--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -29,27 +29,25 @@
 </head>
 
 <body>
-	<!-- Navigation Mobile type 2 -->
+	<!-- WhatsApp -->
+
 	<a href="http://bit.ly/2m6la4k" Style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50%;text-align:center;font-size:30px;box-shadow: 1px 1px 2px #888;
 		z-index:1000;" target="_blank">
 		<i style="margin-top:16px" class="fa fa-whatsapp"></i>
 	</a>
+
+	<!-- Navigation Mobile type 2 -->
+
 	<a class="open_menu color-main bg-light radius_full"><i class="fas fa-bars lh-40"></i></a>
 	<div class="navigation_mobile bg-light type2">
 		<a class="close_menu color-main"><i class="fas fa-times"></i></a>
 		<div class="px-40 pt-60 pb-60 text-center inner">
-
-			<div><a href="index.html#diferenciais" class="f-heading f-22 link color-white mb-20">Diferenciais</a></div>
-
-			<div><a href="index.html#clientes" class="f-heading f-22 link color-white mb-20">Clientes</a></div>
-
-			<div><a href="index.html#planos" class="f-heading f-22 link color-white mb-20">Planos e Preços</a></div>
-
-			<div><a href="index.html#" class="f-heading f-22 link color-white mb-20">Blog</a></div>
-
-			<div><a href="#contato" class="f-heading f-22 link color-white mb-20">Contato</a></div>
-
-			<div><a href="#acesso" class="f-heading f-22 link color-white mb-20">Acesso</a></div>
+			<div><a href="index.html#diferenciais" class="f-heading f-22 link color-main mb-20">Diferenciais</a></div>
+			<div><a href="index.html#clientes" class="f-heading f-22 link color-main mb-20">Clientes</a></div>
+			<div><a href="index.html#planos" class="f-heading f-22 link color-main mb-20">Planos e Preços</a></div>
+			<div><a href="#" class="f-heading f-22 link color-main mb-20">Blog</a></div>
+			<div><a href="#contato" class="f-heading f-22 link color-main mb-20">Contato</a></div>
+			<div><a href="#acesso" class="f-heading f-22 link color-main mb-20">Acesso</a></div>
 			<div class="socials mt-60">
 				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-twitter"></i></a>
 				<a href="#" target="_blank" class="link color-main f-18 mx-10"><i class="fab fa-facebook"></i></a>
@@ -69,9 +67,10 @@
 		<nav class="header_menu_2 transparent pt-30 pb-30 mt-20">
 			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
-					<div class="col-md-2" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="index.html"><img srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa"></a>
-							<div class="logo color-white">Udara</div>
+					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
+						<a href="index.html"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+						<a href="index.html">
+							<div class="logo color-white" style="text-align: center">Udara</div>
 						</a>
 					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
@@ -88,7 +87,10 @@
 		</nav>
 
 		<div class="container">
-			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile">Udara</div>
+			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile"> <a href="#"><img
+						srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+				<div class="logo color-white">Udara</div>
+			</div>
 			<h2 class="color-white text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
 				Política de Privacidade</h2>
 			<div class="mw-1000 mx-auto mt-35 f-22 color-white op-7 text-justify text-adaptive">
