--- a/index.html
+++ b/index.html
@@ -64,22 +64,22 @@
 
 		<!-- Header Menu 2 -->
 
-		<nav class="header_menu_2 transparent pt-30 pb-30 mt-20">
+		<nav class="header_menu_2 bg-light pt-30 pb-10 mt-0">
 			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
 						<a href="#"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
 						<a href="#">
-							<div class="logo color-white" style="text-align: center">Udara</div>
+							<div class="logo color-main" style="text-align: center">Udara</div>
 						</a>
 					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
 						data-aos="fade-down" data-aos-delay="750">
-						<a href="#diferenciais" class="link color-white f-18 mx-15">Diferenciais</a>
-						<a href="#clientes" class="link color-white f-18 mx-15">Clientes</a>
-						<a href="#planos" class="link color-white f-18 mx-15">Planos & Preços</a>
-						<a href="#" class="link color-white f-18 mx-15">Blog</a>
-						<a href="#contato" class="link color-white f-18 mx-15">Contato</a>
+						<a href="#diferenciais" class="link color-main f-18 mx-15">Diferenciais</a>
+						<a href="#clientes" class="link color-main f-18 mx-15">Clientes</a>
+						<a href="#planos" class="link color-main f-18 mx-15">Planos & Preços</a>
+						<a href="#" class="link color-main f-18 mx-15">Blog</a>
+						<a href="#contato" class="link color-main f-18 mx-15">Contato</a>
 						<a href="#acesso" class="btn sm action-2 mx-15">Acesso</a>
 					</div>
 				</div>
