--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -60,17 +60,24 @@
 
 	<!-- Header 2 -->
 
-	<header class="pt-190 pb-120 bg-dark header_2">
+	<header class="pt-190 pb-120 bg-light header_2">
 
 		<!-- Header Menu 2 -->
 
-		<nav class="header_menu_2 transparent pt-30 pb-30 mt-20">
-			<div class="container px-xl-0">
+		<nav class="header_menu_2 bg-dark pt-30 pb-10 mt-0 ">
+			<div class="container bg px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="index.html"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
+						<a href="index.html"><img srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa"></a>
 						<a href="index.html">
 							<div class="logo color-white" style="text-align: center">Udara</div>
+							<style>
+								@media(max-width: 1200px) {
+									.logo.color-white {
+										color: #650065;
+									}
+								}
+							</style>
 						</a>
 					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
@@ -91,9 +98,9 @@
 						srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
 				<div class="logo color-white">Udara</div>
 			</div>
-			<h2 class="color-white text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
+			<h2 class="color-main text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
 				Política de Privacidade</h2>
-			<div class="mw-1000 mx-auto mt-35 f-22 color-white op-7 text-justify text-adaptive">
+			<div class="col-xl-10 mx-auto mt-35 f-22 color-#334066 op-7 text-justify text-adaptive">
 				<span data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
 					<p>Respeitamos suas informações.</p>
 					<p>Quando você se cadastra na Udara nós coletamos algumas informações pessoais: nome, telefone e
