Criação da página de Termos de Uso e atualização de links

--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 					</div>
 					<div class="carousel-item">
 						<img class="" src="i/logo-ampesc.png" alt="Logo Ampesc">
-						<div class="mt-20 mb-25 f-22 title">Associacao De Mantenedoras Particulares <br />De Ensino
-							Superior De Santa Catarina</div>
+						<div class="mt-20 mb-25 f-22 title">Associacao de Mantenedoras Particulares <br />de Ensino
+							Superior de Santa Catarina</div>
 						<div class="color-heading text-adaptive">
 						</div>
 					</div>
@@ -324,7 +324,7 @@
 			@media(-webkit-min-device-pixel-ratio: 1.25),
 			(min-resolution: 120dpi) {
 				.contact_1 {
-					background-image: url(i/top-header6.png.);
+					background-image: url(i/top-header6.png);
 				}
 			}
 		</style>
@@ -390,7 +390,7 @@
 					data-aos="fade-down" data-aos-delay="250">
 					<a href="#" class="mr-15 link color-main">Sobre</a>
 					<a href="politica-de-privacidade.html" class="mx-15 link color-main">Política</a>
-					<a href="#" class="mx-15 link color-main">Termos</a>
+					<a href="termos-de-uso.html" class="mx-15 link color-main">Termos</a>
 				</div>
 				<div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
@@ -408,7 +408,7 @@
 				<div class="mt-10 col-xl-4 col-lg-5 col-md-6 col-sm-8" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
 					<div class="color-heading text-adaptive">
-						Dê uma olhada em nossos <a href="#" class="link color-heading">Termos de Uso</a> <br />
+						Dê uma olhada em nossos <a href="termos-de-uso.html" class="link color-heading">Termos de Uso</a> <br />
 						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de
 							Privacidade</a>
 					</div>
