--- a/politica-de-privacidade.html
+++ b/politica-de-privacidade.html
@@ -100,7 +100,7 @@
 			</div>
 			<h2 class="color-main text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
 				Política de Privacidade</h2>
-			<div class="col-xl-10 mx-auto mt-35 f-22 color-#334066 op-7 text-justify text-adaptive">
+			<div class="col-xl-10 mx-auto mt-35 f-18 color-#334066 op-7 text-justify text-adaptive">
 				<span data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
 					<p>Respeitamos suas informações.</p>
 					<p>Quando você se cadastra na Udara nós coletamos algumas informações pessoais: nome, telefone e
@@ -119,6 +119,7 @@
 					você pode solicitar a remoção de seu cadastro de nossa base de contatos, enviando um e-mail para
 					contato@udara.com.br a partir do e-mail que você informou no seu cadastro inicial com o assunto
 					“Excluir meus dados”.</p>
+					<h5>Udara Desenvolvimento de Softwares ®</h5>
 
 				</span>
 			</div>
@@ -203,7 +204,7 @@
 					data-aos="fade-down" data-aos-delay="250">
 					<a href="#" class="mr-15 link color-main">Sobre</a>
 					<a href="#" class="mx-15 link color-main">Política</a>
-					<a href="#" class="mx-15 link color-main">Termos</a>
+					<a href="termos-de-uso.html" class="mx-15 link color-main">Termos</a>
 				</div>
 				<div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
@@ -221,7 +222,7 @@
 				<div class="mt-10 col-xl-4 col-lg-5 col-md-6 col-sm-8" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
 					<div class="color-heading text-adaptive">
-						Dê uma olhada em nossos <a href="#" class="link color-heading">Termos de Uso</a> <br />
+						Dê uma olhada em nossos <a href="termos-de-uso.html" class="link color-heading">Termos de Uso</a> <br />
 						e em nossa <a href="#" class="link color-heading">Política de Privacidade</a>
 					</div>
 				</div>
