--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 			<div class="row justify-content-between align-items-center lh-40 links">
 				<div class="col-lg-4 col-sm-6 text-sm-right text-lg-left order-1 order-lg-0" data-aos-duration="500"
 					data-aos="fade-down" data-aos-delay="250">
-					<a href="#" class="mr-15 link color-main">Sobre</a>
+					<a href="sobre.html" class="mr-15 link color-main">Sobre</a>
 					<a href="politica-de-privacidade.html" class="mx-15 link color-main">Política</a>
 					<a href="termos-de-uso.html" class="mx-15 link color-main">Termos</a>
 				</div>
