--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Política de Privacidade - Udara</title>
+	<title>Sobre - Udara</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="i/favicon.png" type="image/x-icon">
 	<!-- Google Fonts -->
@@ -60,66 +60,76 @@
 
 	<!-- Header 2 -->
 
-	<header class="pt-190 pb-120 bg-light header_2">
+	<header class="pt-190 pb-120 bg-dark header_2">
 
 		<!-- Header Menu 2 -->
 
-		<nav class="header_menu_2 bg-dark pt-30 pb-10 mt-0 ">
-			<div class="container bg px-xl-0">
+		<nav class="header_menu_2 bg-light pt-30 pb-10 mt-0">
+			<div class="container px-xl-0">
 				<div class="row justify-content-between align-items-baseline">
 					<div class="col-md-1" data-aos-duration="500" data-aos="fade-down" data-aos-delay="750">
-						<a href="index.html"><img srcset="i/signo-branco.png" class="img-logo" alt="logo da empresa"></a>
+						<a href="index.html"><img srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
 						<a href="index.html">
-							<div class="logo color-white" style="text-align: center">Udara</div>
-							<style>
-								@media(max-width: 1200px) {
-									.logo.color-white {
-										color: #650065;
-									}
-								}
-							</style>
+							<div class="logo color-main" style="text-align: center">Udara</div>
 						</a>
 					</div>
 					<div class="col-md-10 d-flex justify-content-end align-items-center" data-aos-duration="500"
 						data-aos="fade-down" data-aos-delay="750">
-						<a href="index.html#diferenciais" class="link color-white f-18 mx-15">Diferenciais</a>
-						<a href="index.html#clientes" class="link color-white f-18 mx-15">Clientes</a>
-						<a href="index.html#planos" class="link color-white f-18 mx-15">Planos & Preços</a>
-						<a href="#" class="link color-white f-18 mx-15">Blog</a>
-						<a href="#contato" class="link color-white f-18 mx-15">Contato</a>
+						<a href="index.html#diferenciais" class="link color-main f-18 mx-15">Diferenciais</a>
+						<a href="index.html#clientes" class="link color-main f-18 mx-15">Clientes</a>
+						<a href="index.html#planos" class="link color-main f-18 mx-15">Planos & Preços</a>
+						<a href="#" class="link color-main f-18 mx-15">Blog</a>
+						<a href="#contato" class="link color-main f-18 mx-15">Contato</a>
 						<a href="#acesso" class="btn sm action-2 mx-15">Acesso</a>
 					</div>
 				</div>
 			</div>
 		</nav>
 
+		<div class="fundo-topo"></div>
+		<style>
+			.fundo-topo {
+				width: 100%;
+				height: 100%;
+				background-image: url("i/landing-roxo.png");
+				animation: right-to-left;
+				position: absolute;
+				bottom: 0;
+				animation-duration: 50s;
+				animation-iteration-count: infinite;
+				animation-timing-function: linear;
+			}
+
+			@keyframes right-to-left {
+				from {
+					background-position: 0 0
+				}
+
+				to {
+					background-position: -4000px 0
+				}
+			}
+		</style>
+		
 		<div class="container">
 			<div class="mb-3 logo color-white d-block d-xl-none text-center logo_mobile"> <a href="#"><img
 						srcset="i/logo.png" class="img-logo" alt="logo da empresa"></a>
 				<div class="logo color-white">Udara</div>
 			</div>
-			<h2 class="color-main text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
-				Política de Privacidade</h2>
-			<div class="col-xl-10 mx-auto mt-35 f-18 color-#334066 op-7 text-justify text-adaptive">
+			<h2 class="big color-white text-center" data-aos-duration="500" data-aos="fade-down" data-aos-delay="0">
+				Sobre</h2>
+			<div class="mw-620 mx-auto mt-35 f-22 color-white op-7 text-center text-adaptive">
 				<span data-aos-duration="500" data-aos="fade-down" data-aos-delay="250">
-					<p>Respeitamos suas informações.</p>
-					<p>Quando você se cadastra na Udara nós coletamos algumas informações pessoais: nome, telefone e
-						e-mail.
+
+					<p>Somos a Udara, uma startup que nasceu dentro do ambiente universitário com o objetivo de
+						modernizer e simplificar os processos e rotinas de gestão de pessoas. Acreditamos em um RH mais
+						humano e em colaboradores como agentes da transformação em suas empresas. Nossas soluções tornam
+						essa visão possível e alcançavel a curto prazo.
 					</p>
-					<p>Nosso objetivo ao coletarmos estas informações quanto ao seu nome, seu telefone e também seu
-						e-mail, é termos a possibilidade de entrarmos em contato com você para lhe oferecer nossos
-						produtos, serviços e conteúdo.</p>
-					<p>As suas informações serão coletadas, usadas e tratadas única e exclusivamente pela Udara em
-						ambiente seguro e de acesso restrito, atendendo a preservação da intimidade, da vida privada, da
-						honra e da imagem das partes direta ou indiretamente envolvidas.</p>
-					</p>Caso você recebe um e-mail comercial de nossa equipe, poderá solicitar a interrupção de nossos
-					contatos a qualquer tempo, que não voltaremos a lhe procurar, salvo se houver uma nova solicitação
-					sua.</p>
-					</p>Suas informações nunca serão fornecidas a nenhuma outra empresa que não a Udara, mas mesmo assim
-					você pode solicitar a remoção de seu cadastro de nossa base de contatos, enviando um e-mail para
-					contato@udara.com.br a partir do e-mail que você informou no seu cadastro inicial com o assunto
-					“Excluir meus dados”.</p>
-					<h5>Udara Desenvolvimento de Softwares ®</h5>
+
+					<p>Nossa plataforma de avaliação desempenho é gamificada e torna o colaborador protagonista da
+						própria avaliação. Além disso, nossa plataforma de pesquisa salarial permite equidade e
+						equilíbrio entre as organizações.</p>
 
 				</span>
 			</div>
@@ -202,8 +212,8 @@
 			<div class="row justify-content-between align-items-center lh-40 links">
 				<div class="col-lg-4 col-sm-6 text-sm-right text-lg-left order-1 order-lg-0" data-aos-duration="500"
 					data-aos="fade-down" data-aos-delay="250">
-					<a href="sobre.html" class="mr-15 link color-main">Sobre</a>
-					<a href="#" class="mx-15 link color-main">Política</a>
+					<a href="#" class="mr-15 link color-main">Sobre</a>
+					<a href="politica-de-privacidade.html" class="mx-15 link color-main">Política</a>
 					<a href="termos-de-uso.html" class="mx-15 link color-main">Termos</a>
 				</div>
 				<div class="mb-10 mb-lg-0 col-lg-auto order-0" data-aos-duration="500" data-aos="fade-down"
@@ -222,8 +232,10 @@
 				<div class="mt-10 col-xl-4 col-lg-5 col-md-6 col-sm-8" data-aos-duration="500" data-aos="fade-down"
 					data-aos-delay="0">
 					<div class="color-heading text-adaptive">
-						Dê uma olhada em nossos <a href="termos-de-uso.html" class="link color-heading">Termos de Uso</a> <br />
-						e em nossa <a href="#" class="link color-heading">Política de Privacidade</a>
+						Dê uma olhada em nossos <a href="termos-de-uso.html" class="link color-heading">Termos de
+							Uso</a> <br />
+						e em nossa <a href="politica-de-privacidade.html" class="link color-heading">Política de
+							Privacidade</a>
 					</div>
 				</div>
 			</div>
